.apex/unpackaged/objects/scormanywhere__Transcript__c.object
<CustomObject>
    <fields>
        <fullName>rwscorm__Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>Transcripts</relationshipLabel>
        <relationshipName>Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Attempts__c</fullName>
        <label>Attempts</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Transcripts</relationshipLabel>
        <relationshipName>Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Progress__c</fullName>
        <formula>FLOOR(VALUE(scormanywhere__SCORM_Progress_Measure__c)*100)/100</formula>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Attempt_Completion_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LMS Field</description>
        <label>SCORM Attempt Completion Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Attempt_Progress_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LMS Field</description>
        <label>SCORM Attempt Progress Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Progress_Measure__c</fullName>
        <description>LMS Field</description>
        <label>SCORM Progress Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Progress_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LMS Field</description>
        <label>SCORM Progress Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Satisfied_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LMS Field</description>
        <label>SCORM Satisfied Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Scaled__c</fullName>
        <description>LMS Field</description>
        <label>SCORM Scaled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Session_Data_Part_1__c</fullName>
        <description>LMS Field</description>
        <label>SCORM Session Data Part 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Session_Data_Part_2__c</fullName>
        <description>LMS Field</description>
        <label>SCORM Session Data Part 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Session_Data_Part_3__c</fullName>
        <description>LMS Field</description>
        <label>SCORM Session Data Part 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Session_Time_Stamp__c</fullName>
        <description>LMS Field</description>
        <label>SCORM Session Time Stamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Score__c</fullName>
        <formula>VALUE(scormanywhere__SCORM_Scaled__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Session_Time_Seconds__c</fullName>
        <label>Session Time Seconds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Session_Time__c</fullName>
        <formula>IF ((MOD(scormanywhere__Session_Time_Seconds__c,3600)/60)&gt;=10, TEXT(FLOOR(scormanywhere__Session_Time_Seconds__c/3600)) + &quot;:&quot;, TEXT(FLOOR(scormanywhere__Session_Time_Seconds__c/3600)) + &quot;:0&quot;) + IF((MOD(MOD(scormanywhere__Session_Time_Seconds__c,3600),60))&gt;=10, TEXT( FLOOR(MOD(scormanywhere__Session_Time_Seconds__c,3600)/60)) + &quot;:&quot;, TEXT( FLOOR(MOD(scormanywhere__Session_Time_Seconds__c,3600)/60)) + &quot;:0&quot;) + TEXT(MOD(MOD(scormanywhere__Session_Time_Seconds__c,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Status__c</fullName>
        <formula>IF (AND(scormanywhere__SCORM_Progress_Status__c == false,  scormanywhere__SCORM_Satisfied_Status__c == false, scormanywhere__SCORM_Attempt_Completion_Status__c == false,  scormanywhere__SCORM_Attempt_Progress_Status__c == false),
NULL,
IF ( 
 AND(scormanywhere__SCORM_Progress_Status__c == true,  scormanywhere__SCORM_Satisfied_Status__c == false ), 
  &apos;Failed&apos;, 
  IF(
    OR(
     AND(scormanywhere__SCORM_Progress_Status__c == false,  scormanywhere__SCORM_Satisfied_Status__c == false,  scormanywhere__SCORM_Attempt_Completion_Status__c == false,  scormanywhere__SCORM_Attempt_Progress_Status__c == true),
     AND(scormanywhere__SCORM_Attempt_Completion_Status__c == false,  scormanywhere__SCORM_Attempt_Progress_Status__c == false)
    ),
    &apos;Incomplete&apos;,
      IF(AND(scormanywhere__SCORM_Progress_Status__c == true,  scormanywhere__SCORM_Satisfied_Status__c == true), 
      &apos;Passed&apos;, 
        IF(AND(scormanywhere__SCORM_Progress_Status__c == false,  scormanywhere__SCORM_Satisfied_Status__c == false, scormanywhere__SCORM_Attempt_Completion_Status__c == true,  scormanywhere__SCORM_Attempt_Progress_Status__c == true),
        &apos;Completed&apos;, NULL)
	  )
  )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Test_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Time_Seconds__c</fullName>
        <label>Total Time Seconds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Time__c</fullName>
        <formula>IF ((MOD(scormanywhere__Total_Time_Seconds__c,3600)/60)&gt;=10, TEXT(FLOOR(scormanywhere__Total_Time_Seconds__c/3600)) + &quot;:&quot;, TEXT(FLOOR(scormanywhere__Total_Time_Seconds__c/3600)) + &quot;:0&quot;) + IF((MOD(MOD(scormanywhere__Total_Time_Seconds__c,3600),60))&gt;=10, TEXT( FLOOR(MOD(scormanywhere__Total_Time_Seconds__c,3600)/60)) + &quot;:&quot;, TEXT( FLOOR(MOD(scormanywhere__Total_Time_Seconds__c,3600)/60)) + &quot;:0&quot;) + TEXT(MOD(MOD(scormanywhere__Total_Time_Seconds__c,3600),60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transcript</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transcript</label>
    <listViews>
        <fullName>scormanywhere__All</fullName>
        <columns>scormanywhere__User__c</columns>
        <columns>scormanywhere__Course__c</columns>
        <columns>NAME</columns>
        <columns>scormanywhere__Attempts__c</columns>
        <columns>scormanywhere__Launch_Date__c</columns>
        <columns>scormanywhere__Score__c</columns>
        <columns>scormanywhere__Progress__c</columns>
        <columns>scormanywhere__Status__c</columns>
        <columns>scormanywhere__Completion_Date__c</columns>
        <columns>scormanywhere__Total_Time__c</columns>
        <columns>scormanywhere__Session_Time__c</columns>
        <columns>scormanywhere__Test_Launch__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRS-{0}</displayFormat>
        <label>Transcript Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcripts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>